# premortem

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
examples/: payment_contingency.yaml
premortem/: __init__.py  analyzer.py  cli.py  models.py
premortem/prompts/: analyze.md
tests/: test_smoke.py
